--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
+  <body>
+    <header class="py-3 px-6 ">
+      <nav class="navbar">
+        <span><img src="/vite.svg" alt=""></span>
+        <ul class="list">
+          <li>Inicio</li>
+          <li>Servicios</li>
+          <li>Sobre Nosotros</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
